momentsAppMeteor.css
/* CSS declarations go here */


/* MDL OVERRIDE */

.moment .mdl-card__supporting-text {
  padding: 8px;
}
.moment .mdl-card__actions {
  padding: 2px;
}


/*.demo-layout-transparent {
  background: url("images/transparent.jpg") center / cover;
}*/


body {
  font-family: 'Roboto, Helvetica, Arial, sans-serif';

}

p {
  font-size: 16px;
}


header {
  padding: 0 15px 15px;
}


form.new-moment {
  border: 1px solid;
  padding: 10px;
  background-color: #eee;
}

.dev-bar {
  padding: 15px 30px;
  background-color: #4A148C;
}

.dev-bar button {
  margin-right: 8px;
}

.moments-container {
  overflow:auto;
  background-color: #fafafa;
  padding: 30px;
}

.moment {
  padding: 8px;
  margin-bottom: 10px;
  margin-right: 10px;
  /*border: 1px solid ;*/
  float: left;
  position: relative;
  min-width: 100px;
  min-height: 70px;
  max-width: 150px;
}

.text {
  clear: both;
  padding-top: 5px;
}


button.remove {
  display: inline-block;
  position: absolute;
  right: 0;
  top: 0;
}



.creation-date {
  margin-top: 0;
  font-size: 85%;
}



.fixed-add-button {
  position: fixed;
  right: 30px;
  bottom: 30px;
}

